<?xml version="1.0"?>
<package format="2">
  <name>scat_libs</name>
  <version>0.0.0</version>
  <description>The scat_lib package</description>
  <maintainer email="martijn@todo.todo">martijn</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>scat_msgs</depend>
  <depend>tf</depend>

  <export>
  </export>
</package>
